# $snafu: NEWS,v 2.2 2004/06/27 20:43:00 marc Exp $

List of changes (for 2.2)

 - Upload altitude in D108/D109 waypoints
   Thanks to Michal Tyrala for the patch.

List of changes (for 2.1)

 - strlcpy.c (only used in LINUX builds) needs stdio.h for gpslib.h
   Thanks to Greg Louis for the patch.

List of changes (for 2.0)

 - fix pasto that use lat instead of long when coding d105 and d108
   waypoints.   Thanks to Frank Eberle for the notification of the problem.

List of changes/additions (for 1.9x)

 - Linux support fixed from Eric Zager

 - NetBSDisms from Greg Troxel

 - cosmetic changes for release testing

List of changes/additions (for 1.9)

 - upload/download download of auto-routed routes doesn't generate a
   user waypoint on devices such as the GPS V.

 - rewrite the output code to make it easier to support new protocols
   and data formats.  Output formats have changed.   Output from previous
   versions of the code can NOT be uploaded using this version.

 - rewrite the code that prepares data for upload to gps to handle the
   new output formats in addition to old formats.

 - debugging code clean-up

List of changes/additions (for 1.8)

- code shuffle.   Several things were moved around.

- code style change.   The code is now closer to OpenBSD KNF in style.

- code to recognize eTrex waypoint and track headers from
  jason@thought.net (Jason L. Wright)

- You can now run garmin utils on your VAX (if it's running *BSD)
  also from jason@thought.net

List of changes/additions (for 1.7)

- now in the public domain

List of changes/additions (for 1.6).

- Fix Linux/BSD generation bug.

- Pass make options in a way compatible to all the *BSD variants.

List of changes/additions (for 1.5).

- bug (in fact, two of them) in lib/gpsload.c was fixed

- support for D100/D103/D104 waypoint packets in gpsprint.c and
  gpsformat.c was added

- capabilities packet processed now in gpscap.c; extra field