@@ -1,4 +1,4 @@
-# $snafu: Makefile,v 2.1 2004/08/19 02:45:29 marc Exp $
+# $snafu: Makefile,v 2.2 2006/07/14 02:35:53 marc Exp $
 #
 # Garmin communications protocol library
 #
@@ -6,6 +6,7 @@ LIB=		garmin
 NOPROFILE=	yes
 NOPIC=		yes
 NOLINT=		yes
+#WANTLINT=	yes
 
 SRCS=		gps1.c gps2.c gpsdisplay.c gpsprod.c gpscap.c gpsdump.c \
 		gpsprint.c gpsversion.c gpsformat.c gpsload.c gpsfloat.c
