@@ -1,4 +1,10 @@
-# $snafu: NEWS,v 2.2 2004/06/27 20:43:00 marc Exp $
+# $snafu: NEWS,v 2.3 2006/07/14 02:35:53 marc Exp $
+
+List of changes (for 2.3)
+
+ - Apply patches from Andreas Gustafsson to fix signed/unsigned char
+   ambiguities (and possible errors) noticed on the latest versions
+   of NetBSD.
 
 List of changes (for 2.2)
 
